tests/fixtures/invalid_programs/undefined_variable.rzn
// tests/fixtures/invalid_programs/undefined_variable.rzn
// Undefined variable error

fun main() -> int {
    return undefined_var // Using undefined variable
}
